2011-08-05      1.8005  Include tests for bugfix in distro

2011-08-05      1.8004  Bugfix for divining country code from subclasses;
                        New UK allocations

2011-07-19      1.8003  UK parser made a teensy bit more robust;
                        UK parser bugfixed for 01768 88 mixed length stupidity
                        New UK allocations

2011-07-08      1.8002  New UK allocations;
                        Numerous small changes in Number::Phone::Country
                          Tidying number ranges in Mayotte;
                          Minor bugfix for Mayotte;
                          Gibraltar can't be called in the Spanish
                            numbering scheme any more;
                          Ellipsos satcomms have gone away;
                          Kazakhstan has +76 and +77 instead of random
                            bits all over +7;
                          Western Sahara number ranges identified;
                          Kosovo (no ISO3166 country code yet, so I'm
                            temporarily using KOS, as used by the UN
                            Development Programme, see
                            wikipedia://List_of_UNDP_country_codes);
                          Canada and the US have some new codes;
                          Netherlands Antilles are splitting up;
                          Dominican Republic now has +1 849;

2011-05-20      1.8001  New UK allocations

2010-09-12      1.8     INCOMPATIBLE CHANGE: constructor will now return
                          a minimal object instead of undef if there's no
                          country-specific module available
                        New UK allocations

2010-07-05      1.7101  Bugfix for N::P->new('CC', '+NN12345');

2010-07-02      1.7100  Bugfix for N::P->new('CC', '12345');
                        New UK allocations

2010-02-17      1.7004  New UK allocations;
                        UK geographic numbers are no longer assumed to